src/components/custom/header/s.module.scss
@import '/src/styles/vars';

.component {
  &:global(.ant-layout-header) {
    align-items: center;
    background-color: transparent;
    box-shadow: inset 0 -1px 0 var(--theme-border-color);
    display: flex;
    height: var(--theme-header-height);
    justify-content: space-between;
    line-height: var(--theme-header-height);
    padding: 0 40px;

    @media (max-width: #{$max-width-tablet-portrait}) {
      padding: 0 20px;
    }

    :local(.logoWrapper) {
      display: none;

      @media (max-width: #{$max-width-mobile}) {
        display: flex;
      }
    }
  }
}

.title {
  color: var(--theme-text-color);
  font-size: 24px;
  font-weight: 500;
  line-height: 1.2;
  margin: 0;

  @media (max-width: #{$max-width-mobile}) {
    display: none;
  }
}

.endWrapper {
  align-items: center;
  display: flex;
  gap: 8px;
  margin-left: auto;
}

.drawer {
  --sidebar-horizontal-padding: 20px;

  &:global(.ant-drawer) {
    height: calc(100vh - var(--theme-header-height));
    top: var(--theme-header-height);
  }

  & :global(.ant-drawer-content) {
    background-color: var(--theme-secondary-block);
  }

  & :global(.ant-drawer-body) {
    padding: 0;
    display: flex;
    flex-direction: column;
  }

  .sideMenuFooter {
    margin-top: auto;
  }
}

.infoButton {
  @media (max-width: #{$max-width-tablet-portrait}) {
    display: none !important;
  }
}

